fixed issue where when get trending animes in begining it would flicker and issues with searchbar also ficker

--- a/frontend/src/scss/_Searchbar.scss
+++ b/frontend/src/scss/_Searchbar.scss
@@ -1,15 +1,14 @@
 .searchBar {
-    display: block;
     display: flex;
     justify-content: center;
     margin-top: 3rem;
     
     input {
-        width: 100%;
+        width: 90%;
         min-width: 75%;
         padding: 0.5rem 0.3rem 0.5rem 0.3rem;
         margin-left: 20rem;
         margin-right: 20rem;
         height: 25px;
-    }   
+    } 
 }
